--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -4,15 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
-  <link rel="stylesheet" href="/css/userAdvertise.css">
-  <link rel="stylesheet" href="/css/userAllProducts.css">
-  <link rel="stylesheet" href="/css/userFooter.css">
-  <link rel="stylesheet" href="/css/userHeader.css">
-  <link rel="stylesheet" href="/css/userHome.css">
-  <link rel="stylesheet" href="/css/userIntroduce.css">
-  <link rel="stylesheet" href="/css/userNavigate.css">
-  <link rel="stylesheet" href="/css/userNewArrival.css">
-  <link rel="stylesheet" href="/css/userProduct.css">
+  <link rel="stylesheet" href="/css/userSignIn.css">
+  <link rel="stylesheet" href="/css/userSignUp.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,20 +14,10 @@
   <title>{{title}}</title>
 </head>
 <body>
-  <header>
-    {{> userHeader}}
-  </header>
-  
-  <nav>
-    {{> userNavigate}}
-  </nav>
   
   <main>
     {{{body}}}
   </main>
 
-  <footer>
-    {{> userFooter}}
-  </footer>
 </body>
 </html>
