--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -2,15 +2,15 @@
     <div class="table">
       <div class="image-box">
         <div class="thumbnails">
-          <img src="../img/1.jpg" />
-          <img src="../img/1.jpg" />
-          <img src="../img/1.jpg" />
-          <img src="../img/1.jpg" />
-          <img src="../img/1.jpg" />
+          <img src="../uploads/{{product.avatar}}" />
+          <img src="../uploads/{{product.avatar}}" />
+          <img src="../uploads/{{product.avatar}}" />
+          <img src="../uploads/{{product.avatar}}" />
+          <img src="../uploads/{{product.avatar}}" />
         </div>
 
         <div class="image">
-          <img src="../img/1.jpg" />
+          <img src="../uploads/{{product.avatar}}" />
         </div>
       </div>
       
