--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -25,28 +25,18 @@
 <div class="header-button">
   <i class="fi fi-rr-shopping-cart-add"></i>
 
-  {{!-- <div class="dropdown-avatar">
+  <div class="dropdown-avatar">
     <div class="avatar-image">
       <img src="../../img/4.jpg" alt="loading"/>
     </div>
     <div class="avatar">
       <div class="avatar-animation">
         <div class="avatar-content">
-          <a href="/admin/create">Thêm sản phẩm</a>
-        </div>
-      </div>
-      <div class="avatar-animation">
-        <div class="avatar-content">
-          <a href="/admin/update">Sửa sản phẩm</a>
-        </div>
-      </div>
-      <div class="avatar-animation">
-        <div class="avatar-content">
-          <a href="">Đăng xuất</a>
+          <a href="/login">Đăng nhập</a>
         </div>
       </div>
     </div>
-  </div> --}}
+  </div>
   
   <i class="fi fi-rs-toggle-on" onclick="myFunction()"></i>
 </div>
