--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -36,7 +36,7 @@
       <i class="fi fi-br-browser"></i>
       Giao diện chính
     </a>
-    <a href="/admin/personal-update" class="sidebar-button">
+    <a href="/admin/update-profile" class="sidebar-button">
       <i class="fi fi-br-circle-user"></i>
       Cập nhật thông tin cá nhân
     </a>
@@ -59,4 +59,5 @@
 
   let helloText = `Chúc bạn một ${checkDay} vui vẻ !!!`
   document.getElementById('welcome-text').innerHTML = helloText
+
 </script>
