--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -32,7 +32,7 @@
     <div class="avatar">
       <div class="avatar-animation">
         <div class="avatar-content">
-          <a href="/login">Đăng nhập</a>
+          <a href="/authentication/sign-in">Đăng nhập</a>
         </div>
       </div>
     </div>
