--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -3,16 +3,16 @@
     <div class="form-title">
       <p>Thêm sản phẩm mới</p>
     </div>
-    {{!-- <div class="form-group">
+    <div class="form-group">
       <label for="details">Loại gì nhể</label>
-      <select>
+      <select name="cate">
         <option value="">Phấn má</option>
         <option value="">Kem chống nắng</option>
         <option value=""></option>
         <option value=""></option>
         <option value=""></option>
       </select>
-    </div> --}}
+    </div>
 
     <div class="form-group">
       <label for="brand">Hãng gì nhể</label>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="form-group">
-      <label for="details">Cuối cùng thì cho xin nốt cái ảnh</label>
+      <label>Cuối cùng thì cho xin nốt cái ảnh</label>
       <input type="file" name="avatar" id="avatar"/>
     </div>
     <div class="submit-button">
