--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -10,35 +10,35 @@
   <div class="admin-button">
     <a href="/admin" class="sidebar-button">
       <i class="fi fi-br-home"></i>
-      Trang chủ
+      <p>Trang chủ</p>
     </a>
     <a href="/admin/create" class="sidebar-button">
       <i class="fi fi-br-layer-plus"></i>
-      Thêm sản phẩm
+      <p>Thêm sản phẩm</p>
     </a>
     <a href="/admin/update" class="sidebar-button">
       <i class="fi fi-rr-box-open"></i>
-      Tổng sản phẩm
+      <p>Tổng sản phẩm</p>
     </a>
     <a href="/admin/trash" class="sidebar-button">
       <i class="fi fi-br-trash"></i>
-      Sản phẩm đã xoá
+      <p>Tổng sản phẩm</p>
     </a>
     <a href="/admin/introduce-update" class="sidebar-button">
       <i class="fi fi-bs-link-alt"></i>
-      Sửa giới thiệu
+      <p>Sửa giới thiệu</p>
     </a>
     <a href="/admin/footer-update" class="sidebar-button">
       <i class="fi fi-bs-link-alt"></i>
-      Sửa chân trang
+      <p>Sửa chân trang</p>
     </a>
     <a href="/home" class="sidebar-button">
       <i class="fi fi-br-browser"></i>
-      Giao diện chính
+      <p>Giao diện chính</p>
     </a>
     <a href="/admin/update-profile" class="sidebar-button">
       <i class="fi fi-br-circle-user"></i>
-      Cập nhật thông tin cá nhân
+      <p>Cập nhật thông tin cá nhân</p>
     </a>
   </div>
 </div>
