--- a/src/resource/views/partials/userFooter.hbs
+++ b/src/resource/views/partials/userFooter.hbs
@@ -1,17 +1,8 @@
 <div class="footer">
-  <div class="commitment-information">
-    <img src="../../img/full_logo.jpg" />
-    <p>Bunny Store là cửa hàng mỹ phẩm chính hãng uy tín và dịch vụ chăm sóc khách hàng tận tâm. Đến với Bunny Store, bạn có thể hoàn toàn yên tâm chọn cho mình bộ sản phẩm phù hợp và ưng ý từ các nhãn hàng nổi tiếng trên toàn thế giới.</p>
-  </div>
-  <div class="policy-information">
-    <p>Chính sách</p>
-    <ul>
-      <li>Chính sách và giao nhận thanh toán</li>
-      <li>Chính sách bảo mật thông tin cá nhân</li>
-      <li>Chính sách đổi trả sản phẩm</li>
-      <li>Điều khoản sử dụng</li>
-      <li>Chính sách và quy định chung</li>
-      <li>Khách hàng thân thiết</li>
-    </ul>
-  </div>
+  <p>𝘽𝙪𝙣𝙣𝙮 𝘾𝙤𝙨𝙢𝙚𝙩𝙞𝙘𝙨</p>
+  <ul>
+    <li>Online store</li>
+    <li>Based in HN</li>
+    <li>Only authentic</li>
+  </ul>
 </div>
