--- a/src/public/css/adminSidebar.css
+++ b/src/public/css/adminSidebar.css
@@ -6,6 +6,7 @@
   z-index: 1;
   position: fixed;
   background-color: #D1A6A6;
+  transition: 0.1s ease-out;
 
   .admin-account{
     margin-top: 10px;
@@ -23,7 +24,6 @@
     }
 
     p {
-      width: 20alic;
       margin-block-start: 0;
       margin-block-end: 0;
     }
@@ -34,7 +34,7 @@
     margin-top: 20px;
 
     .sidebar-button {
-      width: 90%;
+      width: 100%;
       height: 50px;
       display: flex;
       align-items: center;
@@ -44,13 +44,35 @@
       font-weight: bolder;
       text-transform: uppercase;
       gap: 10px;
-      padding-left: 10px;
 
-      i { font-size: 20px}
+      i { 
+        padding-left: 10px;
+        font-size: 20px
+      }
     };
     
     .sidebar-button:hover {
       background-color: #ffffff19;
     }
   }
+}
+
+@media screen and (max-width: 700px) {
+  p {
+    display: none;
+  }
+
+  .admin-sidebar-container {
+    width: 70px;
+
+    .admin-button .sidebar-button {
+      padding-left: 0;
+      justify-content: center;
+
+      i { padding-left: 0 }
+    }
+  }
+
+  
+  
 }
