--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/css/userIntroduce.css">
   <link rel="stylesheet" href="/css/userNavigate.css">
   <link rel="stylesheet" href="/css/userNewArrival.css">
+  <link rel="stylesheet" href="/css/userOrders.css">
   <link rel="stylesheet" href="/css/userProduct.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
