--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -22,7 +22,7 @@
     </a>
     <a href="/admin/trash" class="sidebar-button">
       <i class="fi fi-br-trash"></i>
-      <p>Tổng sản phẩm</p>
+      <p>Kho</p>
     </a>
     <a href="/admin/introduce-update" class="sidebar-button">
       <i class="fi fi-bs-link-alt"></i>
