--- a/src/public/css/adminCreate.css
+++ b/src/public/css/adminCreate.css
@@ -35,7 +35,7 @@
       max-width: 500px;
       height: 30px;
       border-radius: 5px;
-      border-style: none;
+      border-style: none
     };
 
     #avatar {
