--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -3,7 +3,7 @@
     <div class="form-title">
       <p>Thêm sản phẩm mới</p>
     </div>
-    <div class="form-group">
+    {{!-- <div class="form-group">
       <label for="details">Loại gì nhể</label>
       <select name="cate">
         <option value="">Phấn má</option>
@@ -12,7 +12,7 @@
         <option value=""></option>
         <option value=""></option>
       </select>
-    </div>
+    </div> --}}
 
     <div class="form-group">
       <label for="brand">Hãng gì nhể</label>
