--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -21,20 +21,17 @@
   </form>
 </div>
   
-
 <div class="header-button">
-  <i class="fi fi-rr-shopping-cart-add"></i>
+  <a href="/orders">
+    <i class="fi fi-rr-shopping-cart-add"></i>
+  </a>
 
   <div class="dropdown-avatar">
     <div class="avatar-image">
       <img src="../../img/4.jpg" alt="loading"/>
     </div>
     <div class="avatar">
-      <div class="avatar-animation">
-        <div class="avatar-content">
-          <a href="/authentication/sign-in">Đăng nhập</a>
-        </div>
-      </div>
+      <a href="/authentication/sign-in">Đăng nhập</a>
     </div>
   </div>
   
