--- a/src/resource/views/admin/update.hbs
+++ b/src/resource/views/admin/update.hbs
@@ -39,10 +39,11 @@
             <div id="id01" class="modal">
               <form class="modal-content">
                 <div class="container">
+                  <p><strong>Xoá sản phẩm ?</strong></p>
                   <p>Bạn có muốn xoá sản phẩm {{this.name}} không</p>
                   <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Huỷ</button>
                     <button id="delete-button" type="button" class="deletebtn">Xoá</button>
+                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Huỷ</button>
                   </div>
                 </div>
               </form>
