--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -2,7 +2,7 @@
   <div class="dropdown">
     <div class="dropdown-title">
       <i class="fi fi-br-menu-burger"></i>
-      <p>DANH MỤC SẢN PHẨM</p> 
+      <p><strong>DANH MỤC SẢN PHẨM</strong></p> 
     </div>
   
     <div class="dropdown-content">
@@ -14,20 +14,20 @@
         <div class="dropdown-content-dropright-content">
           <div class="column">
             <div class="column-1">    
-              <a href="">Xịt khoáng</a>
-              <a href="">Mặt nạ</a>
-              <a href="">Serum</a>
-              <a href="">BHA</a>
-              <a href="">Tẩy da chết</a>
-              <a href="">Dưỡng da</a>
+              <a href="/all-products/xit-khoang">Xịt khoáng</a>
+              <a href="/all-products/mat-na">Mặt nạ</a>
+              <a href="/all-products/serum">Serum</a>
+              <a href="/all-products/bha">BHA</a>
+              <a href="/all-products/tay-da-chet">Tẩy da chết</a>
+              <a href="/all-products/duong-da">Dưỡng da</a>
             </div>
 
             <div class="column-2">    
-              <a href="">Toner</a>
-              <a href="">Nước tẩy trang</a>
-              <a href="">Chấm mụn</a>
-              <a href="">Kem dưỡng ẩm</a>
-              <a href="">Sửa rửa mặt</a>
+              <a href="/all-products/toner">Toner</a>
+              <a href="/all-products/nuoc-tay-trang">Nước tẩy trang</a>
+              <a href="/all-products/cham-mun">Chấm mụn</a>
+              <a href="/all-products/kem-duong-am">Kem dưỡng ẩm</a>
+              <a href="/all-products/sua-rua-mat">Sữa rửa mặt</a>
             </div>
           </div>
         </div>  
