--- a/src/resource/views/admin/updating.hbs
+++ b/src/resource/views/admin/updating.hbs
@@ -3,6 +3,81 @@
     <div class="form-title">
       <p>Sửa sản phẩm</p>
     </div>
+
+    <div class="form-group">
+      <label for="categories">Loại gì nhể</label>
+      <select name="categories">
+        <option value="">-- Chọn --</option>
+        <option value="skincare">Skincare</option>
+        <option value="makeup">Makeup</option>
+      </select>
+    </div>
+    
+    <div class="form-group" style="display: none">
+      <label for="skincare">Skincare</label>
+      <select name="skincare">
+        <option value="">-- Chọn -- </option>
+        <option value="Xịt khoáng">
+          Xịt khoáng
+        </option>
+        <option value="Mặt nạ">
+          Mặt nạ
+        </option>
+        <option value="Serum">
+          Serum
+        </option>
+        <option value="BHA">
+          BHA
+        </option>
+        <option value="Tẩy da chết">
+          Tẩy da chết
+        </option>
+        <option value="Dưỡng da">
+          Dưỡng da
+        </option>  
+        <option value="Toner">
+          Toner
+        </option>
+        <option value="Nước tẩy trang">
+          Nước tẩy trang
+        </option>
+        <option value="Chấm mụn">
+          Chấm mụn
+        </option>
+        <option value="Kem dưỡng ẩm">
+          Kem dưỡng ẩm
+        </option>
+        <option value="Sữa rửa mặt">
+          Sữa rửa mặt
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group" style="display: none">
+      <label for="makeup">Makeup</label>
+      <select name="makeup">
+        <option value="">-- Chọn -- </option>
+        <option value="Phấn má">
+          Phấn má
+        </option>
+        <option value="Mascara">
+          Mascara
+        </option>
+        <option value="Kẻ mắt">
+          Kẻ mắt
+        </option>
+        <option value="Kem chống nắng">
+          Kem chống nắng
+        </option>
+        <option value="Che khuyết điểm">
+          Che khuyết điểm
+        </option>
+        <option value="Son">
+          Son
+        </option>
+      </select>
+    </div>
+
     <div class="form-group">
       <label for="brand">Hãng gì nhể</label>
       <input type="text" class="form-control" id="brand" value="{{product.brand}}" name="brand" >
@@ -60,3 +135,24 @@
 
   </form>
 </div>
+
+<script>
+
+var selectBox = document.querySelector('select[name="categories"]')
+var selectedValue = ''
+var skincareBox = document.querySelector('select[name="skincare"]').parentElement
+var makeUpBox = document.querySelector('select[name="makeup"]').parentElement
+
+selectBox.onchange = function() {
+  selectedValue = selectBox.options[selectBox.selectedIndex].value;
+  if (selectedValue === 'skincare') {
+    skincareBox.style.display = 'block'
+    makeUpBox.style.display = 'none'
+  }
+  if (selectedValue === 'makeup') {
+    skincareBox.style.display = 'none'
+    makeUpBox.style.display = 'block'
+  }
+}
+
+</script>
