--- a/src/resource/views/users/allProductsFlashSale.hbs
+++ b/src/resource/views/users/allProductsFlashSale.hbs
@@ -10,7 +10,7 @@
   </div>
   
   <div class="all-products">
-    {{#each flashDealProduct}}
+    {{#each product}}
       <div class="product">
         <a href="/product/{{this.slug}}">
           <img src="../uploads/{{this.avatar}}" alt="">
